--- a/app/src/main/res/layout/activity_lamps.xml
+++ b/app/src/main/res/layout/activity_lamps.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".MainActivity1">
+        tools:context=".Recommendation">
 
         <TextView
             android:id="@+id/textView9"
