--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -69,7 +69,7 @@
 
 
         <Button
-            android:id="@+id/login_button"
+            android:id="@+id/reccommend_button"
             android:layout_width="139dp"
             android:layout_height="wrap_content"
             android:width="100dp"
