General Flow, Excluding Checkout

--- a/app/src/main/res/layout/activity_preference.xml
+++ b/app/src/main/res/layout/activity_preference.xml
@@ -66,11 +66,11 @@
         android:layout_marginStart="27dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="@+id/textView"
+        android:inputType="number"/>
 
     <Button
         android:id="@+id/submitBtn"
