--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -55,7 +55,7 @@
     </RadioGroup>
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
@@ -71,7 +71,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginBottom="380dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintStart_toEndOf="@+id/test"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
@@ -82,7 +82,7 @@
         android:layout_marginTop="60dp"
         android:text="Expiry Date"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/test" />
 
     <EditText
         android:id="@+id/expiryDate"
