--- a/app/src/main/res/layout/recycler_view_row_pref.xml
+++ b/app/src/main/res/layout/recycler_view_row_pref.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textview2"
                 android:layout_width="84dp"
                 android:layout_height="31dp"
                 android:layout_marginStart="4dp"
@@ -41,7 +41,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="19dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/textView2"
+                app:layout_constraintStart_toEndOf="@+id/textview2"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
 
