--- a/app/src/main/res/layout/activity_set_address.xml
+++ b/app/src/main/res/layout/activity_set_address.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddressSet">
+    tools:context=".SetAddress">
 
     <EditText
         android:id="@+id/user_country7"
