--- a/app/src/main/res/layout/activity_table.xml
+++ b/app/src/main/res/layout/activity_table.xml
@@ -140,7 +140,7 @@
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="80dp"
+            android:layout_width="100dp"
             android:layout_height="48dp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="32dp"
@@ -150,7 +150,7 @@
 
         <Button
             android:id="@+id/button3"
-            android:layout_width="80dp"
+            android:layout_width="100dp"
             android:layout_height="48dp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="32dp"
@@ -160,7 +160,7 @@
 
         <Button
             android:id="@+id/button4"
-            android:layout_width="80dp"
+            android:layout_width="100dp"
             android:layout_height="48dp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="32dp"
@@ -175,7 +175,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="50dp"
-            android:text="Next"
+            android:text="Cart"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView6" />
