--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -66,8 +66,8 @@
 
     <EditText
         android:id="@+id/cardNum"
-        android:layout_width="212dp"
-        android:layout_height="33dp"
+        android:layout_width="221dp"
+        android:layout_height="43dp"
         android:layout_marginStart="20dp"
         android:layout_marginBottom="380dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -80,7 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginTop="60dp"
-        android:text="Expiry Date"
+        android:text="Expiry Date (MMYY)"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/test" />
 
@@ -108,8 +108,8 @@
 
     <EditText
         android:id="@+id/securityNum"
-        android:layout_width="68dp"
-        android:layout_height="37dp"
+        android:layout_width="70dp"
+        android:layout_height="44dp"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="312dp"
         android:minWidth="48dp"
@@ -124,7 +124,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="36dp"
         android:layout_marginBottom="84dp"
-        android:onClick="order_action"
+        android:onClick="goToConfirmation"
         android:text="Complete Order"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -135,7 +135,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginBottom="85dp"
-        android:onClick="back_action"
+        android:onClick="goBackToAddress"
         android:text="back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
